@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-12T02:20:15Z",
+  "timestamp" : "2022-09-12T08:26:58Z",
   "count_outdated" : 2395,
   "uniques_outdated" : 576,
-  "count" : 2440,
-  "uniques" : 608,
+  "count" : 2441,
+  "uniques" : 609,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-09-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
