@@ -1,5 +1,5 @@
 {
-  "count": 45,
+  "count": 46,
   "uniques": 19,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2022-09-11T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-09-12T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
