@@ -1,3 +1,11 @@
+2022-09-12T08:26:58Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3035751271
+* notice: last 14d: unq all: 19 46
+* notice: prev accum: outdated-unq outdated-all / unq all: 576 2395 / 608 2440
+* notice: next accum: outdated-unq outdated-all / unq all: 576 2395 / 609 2441
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-12]
+
 2022-09-12T02:20:15Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3034267062
 * notice: last 14d: unq all: 19 45
